Geometry Nodes Bug: "Viewer" node doesn't connect to geometry socket in the "Object Info" node #90221

Closed
opened 2021-07-27 05:49:48 +02:00 by Some User · 5 comments

System Information
Operating system: Linux-5.11.0-16-generic-x86_64-with-glibc2.33 64 Bits

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-07-26 22:53, hash: 6ee14c966d
Worked: idk

Short description of error
check attached video and file: 2021-07-27 06-38-44.mp4

untitled.blend

Exact steps for others to reproduce the error
check attached video and file

**System Information** Operating system: Linux-5.11.0-16-generic-x86_64-with-glibc2.33 64 Bits **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-07-26 22:53, hash: `6ee14c966d` Worked: idk **Short description of error** check attached video and file: [2021-07-27 06-38-44.mp4](https://archive.blender.org/developer/F10239819/2021-07-27_06-38-44.mp4) [untitled.blend](https://archive.blender.org/developer/F10239820/untitled.blend) **Exact steps for others to reproduce the error** check attached video and file
Author

Added subscriber: @someuser

Added subscriber: @someuser
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Wannes Malfait self-assigned this 2021-07-28 13:38:44 +02:00

This issue was referenced by b304616f2a

This issue was referenced by b304616f2addbba19d1863ea2af73194946df501
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90221
No description provided.